@startuml
!theme plain
hide circle
hide stereotype

' ==========================================
' USERS & AUTH
' ==========================================
package "Users & Authentication" {

entity users {
  * id : uuid <<PK>>
  --
  email : text
  display_name : text
  avatar_uri : text
  prefs : jsonb
  created_at : timestamptz
  updated_at : timestamptz
  deleted_at : timestamptz
}

entity auth_users {
  * user_id : uuid <<PK, FK>>
  --
  password_hash : text
  role : user_role
  last_login : timestamptz
  created_at : timestamptz
  updated_at : timestamptz
  deleted_at : timestamptz
}

entity refresh_tokens {
  * token_hash : text <<PK>>
  --
  user_id : uuid <<FK>>
  expires_at : timestamptz
  revoked : boolean
  created_at : timestamptz
}
}

users ||--|| auth_users
users ||--o{ refresh_tokens

' ==========================================
' ORGANIZATIONS
' ==========================================
package "Organizations & Memberships" {

entity organizations {
  * id : uuid <<PK>>
  --
  owner_id : uuid <<FK>>
  name : text
  created_at : timestamptz
  updated_at : timestamptz
  deleted_at : timestamptz
}

entity organization_members {
  * org_id : uuid <<PK, FK>>
  * user_id : uuid <<PK, FK>>
  --
  role : org_role
  joined_at : timestamptz
}
}

users ||--o{ organizations : owns >
organizations ||--o{ organization_members
users ||--o{ organization_members

' ==========================================
' BOARDS
' ==========================================
package "Boards Workspace" {

entity board_folders {
  * id : uuid <<PK>>
  --
  org_id : uuid <<FK>>
  user_id : uuid <<FK>>
  name : text
  icon : text
  color : text
  meta : jsonb
  created_at : timestamptz
  updated_at : timestamptz
  deleted_at : timestamptz
}

entity boards {
  * id : uuid <<PK>>
  --
  owner_id : uuid <<FK>>
  org_id : uuid <<FK>>
  folder_id : uuid <<FK>>
  title : text
  visibility : board_visibility
  theme : jsonb
  meta : jsonb
  created_at : timestamptz
  updated_at : timestamptz
  deleted_at : timestamptz
}

entity permissions {
  * user_id : uuid <<PK, FK>>
  * board_id : uuid <<PK, FK>>
  --
  role : board_role
  granted_at : timestamptz
}

entity tabs {
  * id : uuid <<PK>>
  --
  board_id : uuid <<FK>>
  title : text
  tab_type : tab_type
  position : int
  layout_config : jsonb
  created_at : timestamptz
  updated_at : timestamptz
  deleted_at : timestamptz
}

entity sections {
  * id : uuid <<PK>>
  --
  tab_id : uuid <<FK>>
  parent_section_id : uuid <<FK>>
  title : text
  position : int
  layout_meta : jsonb
  created_at : timestamptz
  updated_at : timestamptz
  deleted_at : timestamptz
}

entity cards {
  * id : uuid <<PK>>
  --
  board_id : uuid <<FK>>
  tab_id : uuid <<FK>>
  section_id : uuid <<FK>>
  type : card_type
  title : text
  content : jsonb
  ink_data : jsonb
  due_date : timestamptz
  start_time : timestamptz
  end_time : timestamptz
  priority : int
  status : card_status
  tags : text[]
  created_by : uuid <<FK>>
  assignee_id : uuid <<FK>>
  created_at : timestamptz
  updated_at : timestamptz
  deleted_at : timestamptz
}
}

users ||--o{ boards
organizations ||--o{ boards
board_folders ||--o{ boards : contains >
boards ||--o{ permissions
users ||--o{ permissions
boards ||--o{ tabs
tabs ||--o{ sections
sections ||--o{ sections : parent >
boards ||--o{ cards
tabs ||--o{ cards
sections ||--o{ cards
users ||--o{ cards : created >
users ||--o{ cards : assigned >

' ==========================================
' COLLABORATION (COMMENTS & CHAT)
' ==========================================
package "Collaboration" {

entity card_comments {
  * id : uuid <<PK>>
  --
  card_id : uuid <<FK>>
  user_id : uuid <<FK>>
  content : text
  created_at : timestamptz
  updated_at : timestamptz
  deleted_at : timestamptz
}

entity board_messages {
  * id : uuid <<PK>>
  --
  board_id : uuid <<FK>>
  user_id : uuid <<FK>>
  content : text
  created_at : timestamptz
  updated_at : timestamptz
  deleted_at : timestamptz
}
}

cards ||--o{ card_comments
users ||--o{ card_comments
boards ||--o{ board_messages
users ||--o{ board_messages

' ==========================================
' SOCIAL & MESSAGING
' ==========================================
package "Social Graph & Messaging" {

entity user_relations {
  * user_id : uuid <<PK, FK>>
  * friend_id : uuid <<PK, FK>>
  --
  status : relation_status
  created_at : timestamptz
  updated_at : timestamptz
}

entity messages {
  * id : uuid <<PK>>
  --
  sender_id : uuid <<FK>>
  receiver_id : uuid <<FK>>
  subject : text
  body : text
  type : message_type
  related_board : uuid <<FK>>
  related_org : uuid <<FK>>
  status : message_status
  created_at : timestamptz
  deleted_at : timestamptz
}

entity invites {
  * id : uuid <<PK>>
  --
  sender_id : uuid <<FK>>
  email : text
  board_id : uuid <<FK>>
  org_id : uuid <<FK>>
  board_role : board_role
  org_role : org_role
  token : text
  accepted : boolean
  created_at : timestamptz
  expires_at : timestamptz
}
}

users ||--o{ user_relations
users ||--o{ user_relations : friend >
users ||--o{ messages : sends >
users ||--o{ messages : receives >
boards ||--o{ messages
organizations ||--o{ messages
users ||--o{ invites : sends >
boards ||--o{ invites
organizations ||--o{ invites

@enduml
